[58] Convert tests to JUnit 4
Intermediate step to move towards JUnit 5.

Bug: https://github.com/eclipse-emfservices/emf-validation/issues/58
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>